feat: Update docs
